--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ dolore magna aliqua.Ut enim ad minim veniam .
    <!--footer start-->
 <footer>
     <div class="container">
-        <p>© Copyright by <a href="https://www.facebook.com/mohosinfahim007" target="blank"><strong>LEDP SHERPUR.</strong></a> All right Reserved 2020</p>
+        <p>© Copyright by <a href="https://www.facebook.com/mohosinfahim007" target="blank"><strong>MOHOSIN ALAM.</strong></a> All right Reserved 2020</p>
 
     </div>
 </footer>
